--- a/Alquiler_motos/Alquiler_motos/Alquiler_motos.vbproj
+++ b/Alquiler_motos/Alquiler_motos/Alquiler_motos.vbproj
@@ -79,6 +79,11 @@
     <Compile Include="agencia.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Alquiler_motosDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Alquiler_motosDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="cliente.Designer.vb">
       <DependentUpon>cliente.vb</DependentUpon>
     </Compile>
@@ -163,6 +168,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="cliente.resx">
+      <DependentUpon>cliente.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.vb</DependentUpon>
     </EmbeddedResource>
@@ -177,6 +185,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Alquiler_motosDataSet.xsc">
+      <DependentUpon>Alquiler_motosDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Alquiler_motosDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Alquiler_motosDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Alquiler_motosDataSet.xss">
+      <DependentUpon>Alquiler_motosDataSet.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
