--- a/Alquiler_motos/Alquiler_motos/Alquiler_motos.vbproj
+++ b/Alquiler_motos/Alquiler_motos/Alquiler_motos.vbproj
@@ -84,6 +84,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Alquiler_motosDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Alquiler_motosDataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Alquiler_motosDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="cliente.Designer.vb">
       <DependentUpon>cliente.vb</DependentUpon>
     </Compile>
@@ -183,6 +188,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="trabajador.resx">
+      <DependentUpon>trabajador.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Alquiler_motosDataSet.xsc">
@@ -195,6 +203,17 @@
     </None>
     <None Include="Alquiler_motosDataSet.xss">
       <DependentUpon>Alquiler_motosDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Alquiler_motosDataSet1.xsc">
+      <DependentUpon>Alquiler_motosDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Alquiler_motosDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Alquiler_motosDataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Alquiler_motosDataSet1.xss">
+      <DependentUpon>Alquiler_motosDataSet1.xsd</DependentUpon>
     </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
