--- a/Alquiler_motos/Alquiler_motos/Alquiler_motos.vbproj
+++ b/Alquiler_motos/Alquiler_motos/Alquiler_motos.vbproj
@@ -187,6 +187,12 @@
     <Compile Include="garaje.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="impresicion.Designer.vb">
+      <DependentUpon>impresicion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="impresicion.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="login.Designer.vb">
       <DependentUpon>login.vb</DependentUpon>
     </Compile>
@@ -301,6 +307,9 @@
     <EmbeddedResource Include="garaje.resx">
       <DependentUpon>garaje.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="impresicion.resx">
+      <DependentUpon>impresicion.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.vb</DependentUpon>
     </EmbeddedResource>
@@ -321,6 +330,7 @@
       <DependentUpon>reportes.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report_comprobante.rdlc" />
+    <EmbeddedResource Include="Report_impresicion.rdlc" />
     <EmbeddedResource Include="Report_motos.rdlc" />
     <EmbeddedResource Include="Report_reserva.rdlc" />
     <EmbeddedResource Include="Report_trabajador.rdlc" />
